--- a/src/App.css
+++ b/src/App.css
@@ -33,6 +33,22 @@
   min-height: 100vh;
 }
 
+.Header {
+  display: flex;
+  justify-content: space-between;
+  background-color: #282c34;
+  color: white;
+  padding: 20px;
+  align-items: baseline;
+}
+
+.avatarImage {
+  vertical-align: middle;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+}
+
 .App-link {
   color: #61dafb;
 }
