--- a/src/App.css
+++ b/src/App.css
@@ -7,12 +7,20 @@
   pointer-events: none;
 }
 
+.correct-button {
+  border: 3px solid rgb(6, 240, 15);
+}
+
 .red-border {
   border: 1px solid red;
 }
 
 .green-border {
   border: 1px solid green;
+}
+
+.incorrect-button {
+  border: 3px solid red;
 }
 
 @media ( prefers-reduced-motion : no-preference ) {
