--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,14 @@
   pointer-events: none;
 }
 
+.buttonNextHiden {
+  visibility: hidden;
+}
+
+.buttonNext {
+  visibility: visible;
+}
+
 .correct-button {
   border: 3px solid rgb(6, 240, 15);
 }
